[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomic-ledger-py"
version = "0.1.0"
description = "Immutable double-entry transaction ledger"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/atomic_ledger"]
